RESOLVED FIXED30981
WebGL allows objects to be used with the wrong context
https://bugs.webkit.org/show_bug.cgi?id=30981
Summary WebGL allows objects to be used with the wrong context
Oliver Hunt
Reported 2009-10-31 13:59:36 PDT
There are currently no guards to prevent WebGL objects created by one context from (attempting) to be used with another.
Attachments
Patch (45.81 KB, patch)
2009-10-31 14:04 PDT, Oliver Hunt
jhoneycutt: review+
Oliver Hunt
Comment 1 2009-10-31 14:04:11 PDT
Jon Honeycutt
Comment 2 2009-10-31 15:00:20 PDT
Comment on attachment 42259 [details] Patch r=me
Oliver Hunt
Comment 3 2009-10-31 15:20:06 PDT
Committed r50381
Chris Marrin
Comment 4 2009-11-05 10:23:48 PST
*** Bug 30280 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.