WebGL allows objects to be used with the wrong context https://bugs.webkit.org/show_bug.cgi?id=30981

Reviewed by Jon Honeycutt.

Simply add null checks and a few context guards to ensure we don't
deref null or attempt to use an object from a different context.

Tests: fast/canvas/webgl/incorrect-context-object-behaviour.html
       fast/canvas/webgl/null-object-behaviour.html

Canonical link: https://commits.webkit.org/41814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50381 268f45cc-cd09-0410-ab3c-d52691b4dbfc