WebCore/html/canvas/CanvasRenderingContext3D.cpp
@@ -127,44 +127,64 @@ void CanvasRenderingContext3D::activeTexture(unsigned long texture)
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::attachShader(CanvasProgram* program, CanvasShader* shader)
+void CanvasRenderingContext3D::attachShader(CanvasProgram* program, CanvasShader* shader, ExceptionCode& ec)
 {
-    if (!program || !shader)
+    if (!program || program->context() != this || !shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
+    }
     m_context->attachShader(program, shader);
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::bindAttribLocation(CanvasProgram* program, unsigned long index, const String& name)
+void CanvasRenderingContext3D::bindAttribLocation(CanvasProgram* program, unsigned long index, const String& name, ExceptionCode& ec)
 {
-    if (!program)
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
+    }
     m_context->bindAttribLocation(program, index, name);
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::bindBuffer(unsigned long target, CanvasBuffer* buffer)
+void CanvasRenderingContext3D::bindBuffer(unsigned long target, CanvasBuffer* buffer, ExceptionCode& ec)
 {
+    if (!buffer || buffer->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
     m_context->bindBuffer(target, buffer);
     cleanupAfterGraphicsCall(false);
 }
 
 
-void CanvasRenderingContext3D::bindFramebuffer(unsigned long target, CanvasFramebuffer* buffer)
+void CanvasRenderingContext3D::bindFramebuffer(unsigned long target, CanvasFramebuffer* buffer, ExceptionCode& ec)
 {
+    if (!buffer || buffer->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
     m_context->bindFramebuffer(target, buffer);
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::bindRenderbuffer(unsigned long target, CanvasRenderbuffer* renderbuffer)
+void CanvasRenderingContext3D::bindRenderbuffer(unsigned long target, CanvasRenderbuffer* renderBuffer, ExceptionCode& ec)
 {
-    m_context->bindRenderbuffer(target, renderbuffer);
+    if (!renderBuffer || renderBuffer->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
+    m_context->bindRenderbuffer(target, renderBuffer);
     cleanupAfterGraphicsCall(false);
 }
 
 
-void CanvasRenderingContext3D::bindTexture(unsigned long target, CanvasTexture* texture)
+void CanvasRenderingContext3D::bindTexture(unsigned long target, CanvasTexture* texture, ExceptionCode& ec)
 {
+    if (!texture || texture->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
     m_context->bindTexture(target, texture);
     cleanupAfterGraphicsCall(false);
 }
@@ -262,8 +282,12 @@ void CanvasRenderingContext3D::colorMask(bool red, bool green, bool blue, bool a
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::compileShader(CanvasShader* shader)
+void CanvasRenderingContext3D::compileShader(CanvasShader* shader, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
     m_context->compileShader(shader);
     cleanupAfterGraphicsCall(false);
 }
@@ -400,11 +424,12 @@ void CanvasRenderingContext3D::depthRange(double zNear, double zFar)
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::detachShader(CanvasProgram* program, CanvasShader* shader)
+void CanvasRenderingContext3D::detachShader(CanvasProgram* program, CanvasShader* shader, ExceptionCode& ec)
 {
-    if (!program || !shader)
+    if (!program || program->context() != this || !shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
-
+    }
     m_context->detachShader(program, shader);
     cleanupAfterGraphicsCall(false);
 }
@@ -460,20 +485,22 @@ void CanvasRenderingContext3D::flush()
     cleanupAfterGraphicsCall(true);
 }
 
-void CanvasRenderingContext3D::framebufferRenderbuffer(unsigned long target, unsigned long attachment, unsigned long renderbuffertarget, CanvasRenderbuffer* buffer)
+void CanvasRenderingContext3D::framebufferRenderbuffer(unsigned long target, unsigned long attachment, unsigned long renderbuffertarget, CanvasRenderbuffer* buffer, ExceptionCode& ec)
 {
-    if (!buffer)
+    if (!buffer || buffer->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
-        
+    }       
     m_context->framebufferRenderbuffer(target, attachment, renderbuffertarget, buffer);
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::framebufferTexture2D(unsigned long target, unsigned long attachment, unsigned long textarget, CanvasTexture* texture, long level)
+void CanvasRenderingContext3D::framebufferTexture2D(unsigned long target, unsigned long attachment, unsigned long textarget, CanvasTexture* texture, long level, ExceptionCode& ec)
 {
-    if (!texture)
+    if (!texture || texture->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
-        
+    }
     m_context->framebufferTexture2D(target, attachment, textarget, texture, level);
     cleanupAfterGraphicsCall(false);
 }
@@ -590,22 +617,35 @@ PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getIntegerv(unsigned long p
     return array;
 }
 
-int CanvasRenderingContext3D::getProgrami(CanvasProgram* program, unsigned long pname)
+int CanvasRenderingContext3D::getProgrami(CanvasProgram* program, unsigned long pname, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
+
     int result = m_context->getProgrami(program, pname);
     cleanupAfterGraphicsCall(false);
     return result;
 }
 
-PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getProgramiv(CanvasProgram* program, unsigned long pname)
+PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getProgramiv(CanvasProgram* program, unsigned long pname, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     RefPtr<CanvasIntArray> array = m_context->getProgramiv(program, pname);
     cleanupAfterGraphicsCall(false);
     return array;
 }
 
-String CanvasRenderingContext3D::getProgramInfoLog(CanvasProgram* program)
+String CanvasRenderingContext3D::getProgramInfoLog(CanvasProgram* program, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return "";
+    }
     String s = m_context->getProgramInfoLog(program);
     cleanupAfterGraphicsCall(false);
     return s;
@@ -625,29 +665,45 @@ PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getRenderbufferParameteriv(
     return array;
 }
 
-int CanvasRenderingContext3D::getShaderi(CanvasShader* shader, unsigned long pname)
+int CanvasRenderingContext3D::getShaderi(CanvasShader* shader, unsigned long pname, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     int result = m_context->getShaderi(shader, pname);
     cleanupAfterGraphicsCall(false);
     return result;
 }
 
-PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getShaderiv(CanvasShader* shader, unsigned long pname)
+PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getShaderiv(CanvasShader* shader, unsigned long pname, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     RefPtr<CanvasIntArray> array = m_context->getShaderiv(shader, pname);
     cleanupAfterGraphicsCall(false);
     return array;
 }
 
-String CanvasRenderingContext3D::getShaderInfoLog(CanvasShader* shader)
+String CanvasRenderingContext3D::getShaderInfoLog(CanvasShader* shader, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return "";
+    }
     String s = m_context->getShaderInfoLog(shader);
     cleanupAfterGraphicsCall(false);
     return s;
 }
 
-String CanvasRenderingContext3D::getShaderSource(CanvasShader* shader)
+String CanvasRenderingContext3D::getShaderSource(CanvasShader* shader, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return "";
+    }
     String s = m_context->getShaderSource(shader);
     cleanupAfterGraphicsCall(false);
     return s;
@@ -686,36 +742,56 @@ PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getTexParameteriv(unsigned 
     return array;
 }
 
-float CanvasRenderingContext3D::getUniformf(CanvasProgram* program, long location)
+float CanvasRenderingContext3D::getUniformf(CanvasProgram* program, long location, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     float result = m_context->getUniformf(program, location);
     cleanupAfterGraphicsCall(false);
     return result;
 }
 
-PassRefPtr<CanvasFloatArray> CanvasRenderingContext3D::getUniformfv(CanvasProgram* program, long location)
+PassRefPtr<CanvasFloatArray> CanvasRenderingContext3D::getUniformfv(CanvasProgram* program, long location, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     RefPtr<CanvasFloatArray> array = m_context->getUniformfv(program, location);
     cleanupAfterGraphicsCall(false);
     return array;
 }
 
-long CanvasRenderingContext3D::getUniformi(CanvasProgram* program, long location)
+long CanvasRenderingContext3D::getUniformi(CanvasProgram* program, long location, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     long result = m_context->getUniformi(program, location);
     cleanupAfterGraphicsCall(false);
     return result;
 }
 
-PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getUniformiv(CanvasProgram* program, long location)
+PassRefPtr<CanvasIntArray> CanvasRenderingContext3D::getUniformiv(CanvasProgram* program, long location, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     RefPtr<CanvasIntArray> array = m_context->getUniformiv(program, location);
     cleanupAfterGraphicsCall(false);
     return array;
 }
 
-long CanvasRenderingContext3D::getUniformLocation(CanvasProgram* program, const String& name)
+long CanvasRenderingContext3D::getUniformLocation(CanvasProgram* program, const String& name, ExceptionCode& ec)
 {
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return 0;
+    }
     return m_context->getUniformLocation(program, name);
 }
 
@@ -764,7 +840,7 @@ bool CanvasRenderingContext3D::isBuffer(CanvasBuffer* buffer)
 {
     if (!buffer)
         return false;
-        
+
     return m_context->isBuffer(buffer);
 }
 
@@ -804,10 +880,12 @@ void CanvasRenderingContext3D::lineWidth(double width)
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::linkProgram(CanvasProgram* program)
+void CanvasRenderingContext3D::linkProgram(CanvasProgram* program, ExceptionCode& ec)
 {
-    if (!program)
+    if (!program || program->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
         return;
+    }
         
     m_context->linkProgram(program);
     cleanupAfterGraphicsCall(false);
@@ -856,8 +934,12 @@ void CanvasRenderingContext3D::scissor(long x, long y, unsigned long width, unsi
     cleanupAfterGraphicsCall(false);
 }
 
-void CanvasRenderingContext3D::shaderSource(CanvasShader* shader, const String& string)
+void CanvasRenderingContext3D::shaderSource(CanvasShader* shader, const String& string, ExceptionCode& ec)
 {
+    if (!shader || shader->context() != this) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
     m_context->shaderSource(shader, string);
     cleanupAfterGraphicsCall(false);
 }
