LayoutTests/fast/canvas/webgl/resources/shader-test.js
@@ -15,14 +15,22 @@ function create3DContext() {
 
 function loadStandardProgram(context) {
     var program = context.createProgram();
+    context.attachShader(program, loadStandardVertexShader(context));
+    context.attachShader(program, loadStandardFragmentShader(context));
+    context.linkProgram(program);
+    return program;
+}
+
+function loadStandardVertexShader(context) {
     var vertexShader = context.createShader(context.VERTEX_SHADER);
     context.shaderSource(vertexShader, getShaderSource("resources/vertexShader.vert"));
     context.compileShader(vertexShader);
+    return vertexShader;
+}
+
+function loadStandardFragmentShader(context) {
     var fragmentShader = context.createShader(context.FRAGMENT_SHADER);
     context.shaderSource(fragmentShader, getShaderSource("resources/fragmentShader.frag"));
     context.compileShader(fragmentShader);
-    context.attachShader(program, vertexShader);
-    context.attachShader(program, fragmentShader);
-    context.linkProgram(program);
-    return program;
+    return fragmentShader;
 }
